Fix paddings on mobile

--- a/src/components/Footer/NewsletterCTA.css
+++ b/src/components/Footer/NewsletterCTA.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: var(--space-24x) var(--space-8x);
+  padding: var(--space-10x) var(--space-8x);
   background-image: url(/images/newsletter_bg.svg);
   background-position: center;
   background-size: cover;
@@ -37,18 +37,6 @@
   flex-direction: column;
 }
 
-@media (min-width: 50em) {
-  .form-subscribe-field-wrapper {
-    flex-direction: row;
-
-    gap: var(--space-4x);
-  }
-
-  .newsletter-cta .cta-subscribe-input {
-    width: 416px;
-    margin-bottom: var(--space-0x);
-  }
-}
 .newsletter-cta .cta-subscribe-input {
   width: 100%;
   height: 56px;
@@ -90,4 +78,21 @@
   display: block;
   margin-top: var(--space-4x);
   cursor: pointer;
+}
+
+@media (min-width: 50em) {
+  .newsletter-cta {
+    padding: var(--space-24x) var(--space-6x);
+  }
+
+  .form-subscribe-field-wrapper {
+    flex-direction: row;
+
+    gap: var(--space-4x);
+  }
+
+  .newsletter-cta .cta-subscribe-input {
+    width: 416px;
+    margin-bottom: var(--space-0x);
+  }
 }
